--- a/friends.html
+++ b/friends.html
@@ -14,17 +14,17 @@ color:#111;
 }
 
 /* HEADER */
+
 .header{
 display:flex;
 align-items:center;
-gap:10px;
+gap:12px;
 padding:16px;
 background:white;
 border-bottom:1px solid #e5e7eb;
-font-weight:900;
-font-size:20px;
+font-weight:700;
+font-size:18px;
 }
-
 .header button{
 border:none;
 background:none;
@@ -68,14 +68,13 @@ object-fit:cover;
 
 /* NAME + RANK */
 .name{
-font-weight:900;
+font-weight:700;
 font-size:15px;
 }
 
 .rank{
 font-size:12px;
-color:#6b7280;
-margin-top:2px;
+color:#9ca3af;
 }
 
 /* MESSAGE BUTTON */
@@ -89,12 +88,15 @@ font-weight:700;
 border:none;
 cursor:pointer;
 }
-  .friendRow{
+.friendRow{
 display:flex;
 justify-content:space-between;
 align-items:center;
-gap:12px;
+background:white;
+padding:12px;
+border-radius:14px;
 margin-bottom:10px;
+box-shadow:0 2px 6px rgba(0,0,0,.06);
 }
 
 .friendInfo{
@@ -106,12 +108,14 @@ gap:12px;
 .avatarWrapper{
 width:50px;
 height:50px;
+border-radius:50%;
+overflow:hidden;
+box-shadow:0 2px 6px rgba(0,0,0,.2);
 }
 
 .avatarWrapper img{
-width:50px;
-height:50px;
-border-radius:50%;
+width:100%;
+height:100%;
 object-fit:cover;
 }
   .container{
@@ -121,10 +125,10 @@ padding-bottom:110px;
 
 .card{
 background:white;
-padding:16px;
-border-radius:14px;
-margin-bottom:12px;
-box-shadow:0 2px 8px rgba(0,0,0,.05);
+padding:18px;
+border-radius:16px;
+margin-bottom:16px;
+box-shadow:0 3px 10px rgba(0,0,0,.06);
 }
 
 .row{
@@ -146,6 +150,33 @@ color:#111;
 .danger{
 background:#ef4444;
 color:white;
+}
+  .primary{
+background:#2563eb;
+color:white;
+border:none;
+padding:7px 12px;
+border-radius:10px;
+font-size:12px;
+font-weight:600;
+}
+
+.danger{
+background:#ef4444;
+color:white;
+border:none;
+padding:7px 12px;
+border-radius:10px;
+font-size:12px;
+font-weight:600;
+}
+
+.primary:hover{
+background:#1d4ed8;
+}
+
+.danger:hover{
+background:#dc2626;
 }
 
 .bottomnav{
@@ -279,12 +310,12 @@ createdAt:Date.now()
 });
 
 friendStatus.innerText="Request sent ✅";
-document.getElementById("friendEmail").value="";
+friendEmail.value="";
 };
 
 /* RESET BUTTON */
 document.getElementById("resetBtn").onclick = ()=>{
-  document.getElementById("friendEmail").value="";
+friendEmail.value="";
 friendStatus.innerText="";
 };
 function listenFriends(){
