--- a/friends.html
+++ b/friends.html
@@ -292,7 +292,6 @@ const db=getFirestore(app);
 let currentUID=null;
 let currentUserEmail=null;
 let onlineUsers={};
-  let friendsListenerStarted = false;
   
   const friendStatus = document.getElementById("friendStatus");
 const friendsList = document.getElementById("friendsList");
@@ -302,35 +301,21 @@ function requestIdFor(a,b){
 return [a.toLowerCase(),b.toLowerCase()].sort().join("__");
 }
 
+function getUserByEmail(email){
+return new Promise((resolve)=>{
+const q=query(collection(db,"users"),where("email","==",email));
 
-  
-async function getUserByEmail(email){
-
-  const q = query(collection(db,"users"),where("email","==",email));
-  const snap = await getDocs(q);
-
-  if(!snap.empty){
-    return snap.docs[0].data();
-  }
-
-  return null;
-
+onSnapshot(q,(snap)=>{
+if(!snap.empty){
+resolve(snap.docs[0].data());
+}else{
+resolve(null);
+}
+});
+});
 }
 
-
-
-document.getElementById("sendBtn").onclick=async()=>{
-
- const input=friendEmail.value.trim().toLowerCase();
-  if(!input){friendStatus.innerText="Enter email.";return;}
-if(input===currentUserEmail){friendStatus.innerText="Cannot add yourself.";return;}
-
-const rid=requestIdFor(currentUserEmail,input);
-await setDoc(doc(db,"friendRequests",rid),{
-from:currentUserEmail,
-to:input,
-status:"pending",
-cronAuthStateChanged(auth,async(user)=>{
+onAuthStateChanged(auth,async(user)=>{
 if(!user){location.href="index.html";return;}
 
 currentUID = user.uid;
@@ -343,23 +328,21 @@ lastSeen:Date.now()
 },{merge:true});
 
 listenOnlineUsers();
+listenFriends();
+});
 
-if(!friendsListenerStarted){
-  listenFriends();
-  friendsListenerStarted = true;
-}
+document.getElementById("sendBtn").onclick=async()=>{
 
-/* heartbeat to keep user online */
-setInterval(()=>{
-  if(currentUID){
-    setDoc(doc(db,"users",currentUID),{
-      lastSeen:Date.now(),
-      online:true
-    },{merge:true});
-  }
-},5000);
+ const input=friendEmail.value.trim().toLowerCase();
+  if(!input){friendStatus.innerText="Enter email.";return;}
+if(input===currentUserEmail){friendStatus.innerText="Cannot add yourself.";return;}
 
-});eatedAt:Date.now()
+const rid=requestIdFor(currentUserEmail,input);
+await setDoc(doc(db,"friendRequests",rid),{
+from:currentUserEmail,
+to:input,
+status:"pending",
+createdAt:Date.now()
 });
 
 friendStatus.innerText="Request sent ✅";
@@ -371,7 +354,6 @@ document.getElementById("resetBtn").onclick = ()=>{
 friendEmail.value="";
 friendStatus.innerText="";
 };
-
   function listenOnlineUsers(){
 
   onSnapshot(collection(db,"users"),(snap)=>{
@@ -384,6 +366,8 @@ friendStatus.innerText="";
         onlineUsers[u.email.toLowerCase()] = u.online;
       }
     });
+
+    
 
   });
 
@@ -416,7 +400,7 @@ incomingHTML+=`
 <div class="friendInfo">
 <div class="avatarWrapper">
 <img src="${userData?.photo || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}">
-${onlineUsers[otherEmail] && (Date.now() - (userData?.lastSeen || 0) < 15000) ? '<div class="onlineDot"></div>' : ''}
+${onlineUsers[otherEmail] ? '<div class="onlineDot"></div>' : ''}
 
 </div>
 <div>
@@ -438,8 +422,8 @@ friendsList.innerHTML+=`
 
 <div class="avatarWrapper">
 <img src="${userData?.photo || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}">
-${onlineUsers[otherEmail] && (Date.now() - (userData?.lastSeen || 0) < 15000) ? '<div class="onlineDot"></div>' : ''}
 
+${onlineUsers[otherEmail] ? '<div class="onlineDot"></div>' : ''}
 
 </div>
 <div>
