--- a/friends.html
+++ b/friends.html
@@ -315,18 +315,17 @@ function requestIdFor(a,b){
 return [a.toLowerCase(),b.toLowerCase()].sort().join("__");
 }
 
-function getUserByEmail(email){
-return new Promise((resolve)=>{
-const q=query(collection(db,"users"),where("email","==",email));
+async function getUserByEmail(email){
 
-onSnapshot(q,(snap)=>{
+const q = query(collection(db,"users"),where("email","==",email));
+const snap = await getDocs(q);
+
 if(!snap.empty){
-resolve(snap.docs[0].data());
-}else{
-resolve(null);
+return snap.docs[0].data();
 }
-});
-});
+
+return null;
+
 }
 
 onAuthStateChanged(auth,async(user)=>{
@@ -381,13 +380,19 @@ friendStatus.innerText="";
       }
     });
 
-    listenFriends();
+  listenFriends();
 
   });
 
 }
 function listenFriends(){
+
 onSnapshot(collection(db,"friendRequests"),async snap=>{
+renderFriends(snap);
+});
+
+}
+async function renderFriends(snap){
 
 friendsList.innerHTML="";
 let incomingHTML="";
@@ -404,64 +409,77 @@ if(from!==currentUserEmail && to!==currentUserEmail) continue;
 
 const otherEmail=from===currentUserEmail?to:from;
 const userData=await getUserByEmail(otherEmail);
+
 const name=userData?.name||"SeaCrew";
 const rank=userData?.rank||"";
 
 if(status==="pending" && to===currentUserEmail){
+
 hasIncoming=true;
+
 incomingHTML+=`
 <div class="friendRow">
 <div class="friendInfo">
+
 <div class="avatarWrapper">
 <img src="${userData?.photo || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}">
 ${onlineUsers[otherEmail] ? '<div class="onlineDot"></div>' : ''}
-
 </div>
+
 <div>
 <div class="name">${name}</div>
 <div class="rank">${rank}</div>
 </div>
+
 </div>
+
 <div class="row">
 <button class="primary" onclick="acceptRequest('${otherEmail}')">Accept</button>
 <button class="danger" onclick="declineRequest('${otherEmail}')">Decline</button>
 </div>
+
 </div>`;
 }
 
 if(status==="accepted"){
+
 friendsList.innerHTML+=`
 <div class="card friendRow">
+
 <div class="friendInfo">
 
 <div class="avatarWrapper">
 <img src="${userData?.photo || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}">
-
 ${onlineUsers[otherEmail] ? '<div class="onlineDot"></div>' : ''}
-
 </div>
+
 <div>
 <div class="name">${name}</div>
 <div class="rank">${rank}</div>
 </div>
+
 </div>
+
 <div class="row">
 <button class="primary" onclick="openChat('${otherEmail}')">Chat</button>
 <button class="danger" onclick="unfriend('${otherEmail}')">Unfriend</button>
 </div>
+
 </div>`;
 }
 
 }
 
 if(hasIncoming){
-friendsList.innerHTML=
+
+friendsList.innerHTML =
 `<div class="card"><h3>Incoming Requests</h3>${incomingHTML}</div>`
 + friendsList.innerHTML;
+
 }
 
-});
 }
+
 
 window.acceptRequest=async function(other){
 const rid=requestIdFor(currentUserEmail,other);
